' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml ER Diagramm
' ER-Diagramm – Plattform-Account
' Basis: platform_account, billing_account, module_subscription

!theme spacelab
hide circle
skinparam linetype ortho
skinparam entity {
  BackgroundColor White
  BorderColor Black
  StereotypeFontColor Black
}

entity "platform_account" as platform_account <<Aggregate Root>> {
  + id : integer <<PK>>
  --
  display_name : text
  owner_email  : text
  created_at   : timestamp(6)
  updated_at   : timestamp(6)
}

entity "billing_account" as billing_account {
  + account_id   : integer <<PK, FK>>
  --
  vat_id        : text
  iban          : text
  invoice_email : text
}

entity "module_subscription" as module_subscription {
  + subscription_id : integer <<PK>>
  --
  account_id   : integer <<FK>>
  module_code  : text <<UQ(part of ux)>>
  started_at   : timestamp(6)
  ends_at      : timestamp(6)
}

' Beziehungen
' 1 : 0..1  (ein PlatformAccount kann 0 oder 1 BillingAccount haben;
'            BillingAccount MUSS genau 1 PlatformAccount referenzieren)
platform_account ||--o| billing_account : "1 : 0..1\nPK=FK (account_id → id)"

' 1 : 0..*  (ein PlatformAccount kann 0..* Subscriptions haben;
'            jede Subscription gehört genau 1 PlatformAccount)
platform_account ||--o{ module_subscription : "1 : 0..*\nFK (account_id → id)"

' Hinweis auf Unique-Constraint
note right of module_subscription
  UNIQUE (account_id, module_code)
end note

@enduml
